Finalisation CSS Index(Login)

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             <div class="login-form-frame">
                 <form action="" method="post">
                     <div class="login-username">
-                        <label for="username">Username :</label> <input type="text" name="username" id="usernameInput">
+                        <label for="username">Username  </label> <input type="text" name="username" id="usernameInput" placeholder="Username">
                     </div>
                     <div class="login-password">
-                        <label for="password">Password :</label> <input type="password" name="password" id="passwordInput">
+                        <label for="password">Password</label> <input type="password" name="password" id="passwordInput" placeholder="Password">
                     </div>
                     <div class="login-button">
-                        <button type="submit">Login</button>
+                        <a href="?logout=true">Logout</a>
+                        <button type="submit">*</button>
                     </div>
                     <div class="logout-link">
-                        <a href="?logout=true">Logout</a>
                     </div>
                 </form>
             </div>
