Début CSS Lobby

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 ?> -->
 
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
-    <title>Magix Login</title>
+    <title>Login Magix</title>
     <!-- <script defer src=""></script> -->
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/index.css">
